# tao-py-py

./: .gitignore  Pipfile  README.md  app.py  main.py  password_.txt  pyproject.toml  requirements.txt  sample.xlsx
.github/workflows/: python-app.yml
shared/: array_interface.py  base_class.py  di_container.py  env.py  factory.py  i_aggregate.py  i_command.py  i_factory.py  i_iterator.py  i_judgement.py  i_reciver.py  judgement.py  x_folder_aggregate.py  x_folder_iterator.py  x_logger.py
shared/Application/: check_is_base64_service.py  check_is_valid_url_service.py  check_regex_service.py  decode_url_service.py  desktop_app_operator.py  download_file_service.py  download_image_service.py  encode_url_service.py  file_downloader.py  find_web_element_service.py  find_web_elements_service.py  get_file_system_info_service.py  get_post_thumbnail_url_service.py  make_folder_service.py  open_browser_service.py  open_desktop_app_service.py  open_text_service.py  set_webelement_service.py  set_webelement_value_service.py  url_decoder.py  url_encoder.py
shared/Core/: command.py  (+8 more)
tests/: sample.xlsx  test_check_is_valid_url_service.py  test_check_regex_service.py  test_decode_url_service.py  test_download_file_service.py  test_download_image_service.py  test_encode_url_service.py  test_excel.py  test_find_web_element_service.py  test_find_web_elements_service.py  test_make_folder_service.py  test_number_randomizer.py  test_str.py  test_web_browser_operator.py  test_x_file_system_path.py  test_xfile.py  test_xlist.py  test_xurl.py  test_xweb_element.py  test_xweb_element_list.py
(+280 files in other folders)
