[tool.poetry]
name = "tao-py-py"
version = "0.1.0"
description = ""
authors = ["masayan1126 <masa199311266@gmail.com>"]
readme = "README.md"
packages = [{include = "tao_py_py"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
webdriver-manager = "^3.8.3"
selenium = "^4.5.0"
pillow = "^9.2.0"
youtube-dl = "^2021.12.17"
slack-log-handler = "^0.3.0"
tweepy = "^4.10.1"
openpyxl = "^3.0.10"
retry = "^0.9.2"
google-api-python-client = "^2.64.0"
google-auth = "^2.12.0"
youtube-transcript-api = "^0.4.4"
ffmpeg-python = "^0.2.0"
pyautogui = "^0.9.53"
pyperclip = "^1.8.2"
tqdm = "^4.64.1"
atomicwrites = "^1.4.1"
flask = "^2.2.2"
chromedriver-binary = "^107.0.5304.18.0"
mypy = "^0.982"
flake8 = "^5.0.4"
injector = "^0.20.1"
pytest = "^7.1.3"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
